src/mcp/test/fixtures/invalid/aws-sdk-lib-dynamodb.fixture.ts
/**
 * @fixture invalid
 * @rule aws-sdk-encapsulation
 * @severity CRITICAL
 * @description Direct lib-dynamodb import (forbidden)
 * @expectedViolations 1
 */
import {DynamoDBDocumentClient} from '@aws-sdk/lib-dynamodb'

export {DynamoDBDocumentClient}
